# dna-sequence-optimization

./: .gitignore  README.md  README_new.md  best_sequences.fasta  best_super_enhancer.fasta  optimization2.json  optimization3.json  prepare.py  pyproject.toml  results.json  results2.json  results_reconstruction2.json  results_reconstruction_final.json  subtaskA.fa  test.json
config/: global_config.yaml
config/experiments/: exp00_reconstruction_1_base.yaml  exp01_reconstruction_12.yaml  exp01_reconstruction_2_base.yaml  exp02_reconstruction_3.yaml  exp02_reconstruction_3_base.yaml  exp03_optimization.yaml  exp03_optimization_base.yaml  test01_reconstruction.yaml  test02_optimization.yaml
docs/: interpreters_theoretical.md  optimizers.md
docs/architecture/: README.md  optimizers.md  pipeline_overview.md
docs/how_to/: snakemake_reproducibility.md
docs/theory/: README.md  interpreters_theoretical.md  optimizers_theoretical.md
notebooks/: report_final.ipynb  tutorial.ipynb
notebooks/reports parts/: report_final_analysis_1.ipynb
resources/docs/: optimizers_theoretical.md  pipeline_explanation.md
resources/presentation/: README.md  deep_learning_for_regulatory_DNA_sequence_ptimization.md
resources/report/: report_final.ipynb
resources/tests_notebooks/: loader_module.ipynb  motif_analysis_how_to_run.ipynb  scoring_functions.ipynb
resources/tutorial_notebooks/: tutorial.ipynb
scripts/: analysis.py  main.py
scripts/data_preprocessing/: prepare_optimization_data.py  run_cross_val.py
workflow/: Snakefile.smk
workflow/rules/: common.smk  (+1 more)
(+95 files in other folders)
