[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "PromotorOptimizer"
version = "0.0.1"
description = "Package for promotor optimizers based on gradient optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.87",
    "matplotlib>=3.10.9",
    "moods-python>=1.9.4.1",
    "pandas>=2.3.3",
    "pyjaspar>=4.0.0",
    "seaborn>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
